// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OAuthForm should render 1`] = `
<React.Fragment>
  <DefaultButton
    busy={true}
    className="u-mt-1"
    disabled={true}
    extension="full"
    label="oauth.connect.label"
    onClick={[Function]}
  />
</React.Fragment>
`;

exports[`OAuthForm should render reconnect button when updating an account 1`] = `
<React.Fragment>
  <DefaultButton
    busy={true}
    className="u-mt-1"
    disabled={true}
    extension="full"
    label="oauth.reconnect.label"
    onClick={[Function]}
  />
</React.Fragment>
`;
